--- a/public/themes/pterodactyl/css/pterodactyl-original.css
+++ b/public/themes/pterodactyl/css/pterodactyl-original.css
@@ -50,24 +50,7 @@
     top: 0;
     z-index: -1;
 }
-.iTERJN {
-    display: flex;
-    border-radius: 0.25rem;
-    text-decoration: none;
-    --tw-text-opacity: 1;
-    color: hsla(210,16%,82%,var(--tw-text-opacity));
-    -webkit-box-align: center;
-    align-items: center;
-    --tw-bg-opacity: 1;
-    background-color: #222339;
-    padding: 1rem;
-    border-width: 1px;
-    border-color: rgba(0, 0, 0, 0);
-    transition-property: background-color, border-color, color, fill, stroke;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms;
-    overflow: hidden;
-}
+
 .pterodactyl-login-box {
     background: rgba(0, 0, 0, 0.25);
     border-radius: 3px;
@@ -151,7 +134,7 @@ p.small {
 }
 
 .control-sidebar-dark .control-sidebar-menu > li > a.active {
-    background: #05a4e3;
+    background: #1e282c;
 }
 
 .callout-nomargin {
@@ -521,12 +504,12 @@ body {
 }
 
 .skin-blue .wrapper, .skin-blue .main-sidebar, .skin-blue .left-side {
-    background-color: #222339;
+    background-color: #181f27;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.12), 0 2px 4px 0 rgba(0,0,0,.08);
 }
 
 .skin-blue .main-header .logo {
-    background-color: #313352;
+    background-color: #1f2933;
     color: #9aa5b1;
 }
 
@@ -539,35 +522,34 @@ body {
 }
 
 .skin-blue .sidebar-menu>li.header {
-    color: #ffffff;
-    background: #1b1c2b;
+    color: #797979;
+    background: #0e111582;
 }
 
 .skin-blue .main-header .navbar {
-    background-color: #313352;
+    background-color: #1f2933;
 }
 
 .skin-blue .main-header .navbar .sidebar-toggle:hover {
-    background-color: #313352;
+    background-color: #1c252e;
 }
 
 .skin-blue .main-header .logo:hover {
-    background-color: #222339;
+    background-color: #1c252e;
 }
 
 .main-footer {
-    background: #222339;
+    background: #1f2933;
     color: #9aa5b1;
-    border-top: 1px solid #222339;
+    border-top: 1px solid #1f2933;
 }
 
 .skin-blue .sidebar-menu>li.active>a {
-    border-left-color: #a3a9ff;
-    background: #313352;
+    border-left-color: #099aa5;
 }
 
 .text-gray {
-    color: #ffffff !important;
+    color: #9aa5b1 !important;
 }
 
 .text-green {
@@ -583,7 +565,7 @@ body {
 }
 
 .content-wrapper {
-    background-color: #1b1c30;
+    background-color: #33404d;
 }
 
 .btn-success {
@@ -608,27 +590,26 @@ body {
 
 .box {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,.12), 0 2px 4px 0 rgba(0,0,0,.08) !important;
-    background: #222339;
-    border-top: 3px solid #222339;
+    background: #3f4d5a;
+    border-top: 3px solid #1f2933;
 }
 
 .box-header {
-
     color: #cad1d8;
-    background: #222339;
+    background: #1f2933;
 }
 
 .box-header.with-border {
-    border-bottom: 1px solid #222339;
+    border-bottom: 1px solid #1f2933;
 }
 
 .box.box-default {
-    border-top-color: #222339;
+    border-top-color: #1f2933;
 }
 
 .box-footer {
     border-top: 1px solid #4d5b69;
-    background-color: #222339;
+    background-color: #3f4d5a;
 }
 .content-header>.breadcrumb>li>a {
     color: #cad1d8;
@@ -643,7 +624,7 @@ body {
 }
 
 .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {
-    border-top: 1px solid #222339;
+    border-top: 1px solid #4d5b69;
 }
 
 .table>thead>tr>th {
@@ -651,7 +632,7 @@ body {
 }
 
 .table-hover>tbody>tr:hover {
-    background-color: #313352;
+    background-color: #33404d;
 }
 
 a {
@@ -659,7 +640,7 @@ a {
 }
 
 .nav-tabs-custom {
-    background: #222339;
+    background: #1f2933;
 }
 
 .nav-tabs-custom>.nav-tabs>li.active {
@@ -668,9 +649,9 @@ a {
 
 .nav-tabs-custom>.nav-tabs>li.active>a {
     border-top-color: transparent;
-    border-left-color: #313352;
-    border-right-color: #313352;
-    background: #313352;
+    border-left-color: #15161c;
+    border-right-color: #15161c;
+    background: #13181e;
 }
 
 .nav-tabs-custom>.nav-tabs>li>a {
@@ -678,14 +659,14 @@ a {
 }
 
 .nav-tabs-custom>.nav-tabs>li.active>a, .nav-tabs-custom>.nav-tabs>li.active:hover>a {
-    color: #ffffff;
+    color: #9aa5b1;
 }
 
 input.form-control {
     padding: .75rem;
-    background-color: #313352;
+    background-color: #515f6cbb;
     border-width: 1px;
-    border-color: #313352;
+    border-color: #606d7b;
     border-radius: .25rem;
     color: #cad1d8;
     box-shadow: none;
@@ -695,9 +676,9 @@ input.form-control {
 
 textarea.form-control {
     padding: .75rem;
-    background-color: #313352;
+    background-color: #515f6cbb;
     border-width: 1px;
-    border-color: #313352;
+    border-color: #606d7b;
     border-radius: .25rem;
     color: #cad1d8;
     box-shadow: none;
@@ -706,47 +687,47 @@ textarea.form-control {
 }
 
 .input-group .input-group-addon {
-    border-color: #313352;
-    background-color: #313352;
+    border-color: #606d7b;
+    background-color: #515f6cbb;
     color: #cad1d8;
 }
 
 .select2-container--default .select2-selection--single, .select2-selection .select2-selection--single {
-    border: 1px solid #313352;
+    border: 1px solid #606d7b;
 }
 
 .select2-container--default .select2-selection--single {
-    background-color: #313352;
+    background-color: #515f6cbb;
 }
 
 .select2-container--default .select2-selection--single .select2-selection__rendered {
-    color: #ffffff;
+    color: #cad1d8;
 }
 
 .select2-container--default .select2-selection--multiple {
-    background-color: #313352;
+    background-color: #515f6cbb;
 }
 
 .select2-container--default .select2-selection--multiple {
-    border: 1px solid #313352;
+    border: 1px solid #606d7b;
     border-radius: 0;
 }
 
 code {
-    background-color: #313352;
+    background-color: #515f6cbb;
     color: #c3c3c3;
     border: 1px solid rgba(0, 0, 0, .25);
 }
 
 .btn-default {
-    background-color: #313352;
+    background-color: #33404d;
     color: #cad1d8;
-    border-color: #313352;
+    border-color: #606d7b;
 }
 
 .select2-results__option {
     background-color: #b5bcc1;
-    color: #444f5e;
+    color: #444;
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
@@ -754,27 +735,27 @@ code {
 }
 
 .modal-body {
-    background: #ffffff;
+    background: #3f4d5a;
 }
 
 .modal-header {
-    background: #222339;
-    border-bottom-color: #ffffff;
+    background: #3f4d5a;
+    border-bottom-color: #4d5b69;
 }
 
 .modal-footer {
-    background: #222339;
+    background: #3f4d5a;
     border-top-color: #4d5b69;
 }
 
 @media (max-width: 991px) {
     .content-header>.breadcrumb {
-        background: #222339 !important;
+        background: #1f2933 !important;
     }
 }
 
 .nav-tabs-custom>.nav-tabs>li.active>a, .nav-tabs-custom>.nav-tabs>li.active:hover>a {
-     background-color: #313352;
+     background-color: #101216;
 }
 
 .select2-container--default .select2-results__option[aria-selected=true], .select2-container--default .select2-results__option[aria-selected=true]:hover {
@@ -782,12 +763,12 @@ code {
 }
 
 .select2-dropdown {
-    background-color: #444f5e;
-    border: 1px solid #313352;
+    background-color: #515f6cbb;
+    border: 1px solid #606d7b;
 }
 .select2-container--default.select2-container--focus .select2-selection--multiple, .select2-container--default .select2-search--dropdown .select2-search__field {
     border-color: #d2d6de !important;
-    background-color: #444f5e;
+    background-color: #515f6cbb;
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
@@ -803,14 +784,14 @@ a:hover {
 }
 
 .form-control {
-    border-color: #313352;
-    background-color: #313352;
+    border-color: #606d7b;
+    background-color: #515f6cbb;
     color: #cad1d8;
 }
 
 .form-control[disabled], .form-control[readonly],
 fieldset[disabled] .form-control {
-    background-color: #ffffff;
+    background-color: #1f2933;
     color: #cad1d8;
     cursor: not-allowed;
 }
@@ -820,7 +801,7 @@ fieldset[disabled] .form-control {
     padding: 19px;
     margin-bottom: 20px;
     background-color: #515f6cbb;
-    border: 1px solid #5a7dff;
+    border: 1px solid #606d7b;
 }
 
 .well-lg {
@@ -844,11 +825,11 @@ fieldset[disabled] .form-control {
 }
 
 .bg-gray {
-    background-color: #1b1c30 !important;
+    background-color: #33404d !important;
 }
 
 pre {
     color: #cad1d8;
     background-color: #515f6cbb;
-    border-color: #222339;
+    border-color: #1f2933;
 }
